--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,13 +1,15 @@
 .dragg{
   width:1000px;
   margin-bottom: 15px;
+  background-color: #695bb5;
+  color: white;
 }
 
 .dragg-list{
   position: absolute;
   left: 0px;
   margin:10px;
-  box-shadow: 0px 2px 26px 0px #77a1e0;
+  box-shadow: 0px 2px 26px 0px #977de4;
 }
 
 .dragg-dock{
@@ -23,12 +25,13 @@
 
 .dock{
   display: table-caption;
-  width:900px;
+  width:958px;
   border:1px solid lightblue;
   height: auto;
   padding: 20px;
   margin-top: 10px;
-  font-size: smaller;
+  font-size: medium;
+  color: #695bb5;
 }
 
 .score-heading{
@@ -39,3 +42,8 @@ margin-bottom: 12px;
   display:flex;
   justify-content: space-between;;
 }
+
+.badge-primary {
+  background: #977de4;
+}
+
