--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,33 +1,22 @@
 .dragg{
-  width:1000px;
   margin-bottom: 15px;
   background-color: #695bb5;
   color: white;
 }
 
 .dragg-list{
-  position: absolute;
-  left: 0px;
   margin:10px;
   box-shadow: 0px 2px 26px 0px #977de4;
 }
 
 .dragg-dock{
-  position: absolute;
-  right: 0;
   margin: 10px;
 }
 
-.container{
-  max-width: 1000px;
-  position: relative;
-}
-
 .dock{
-  display: table-caption;
-  width:958px;
   border:1px solid lightblue;
   height: auto;
+  width: fit-content;
   padding: 20px;
   margin-top: 10px;
   font-size: medium;
